[package]
name = "track"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
clap = { version = "4.3", features = ["derive"] }
error-stack = "0.5.0"
owo-colors = "4.1.0"
testresult = "0.4.1"
thiserror = "2.0.3"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
