[package]
name = "track"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
chrono = "0.4.38"
clap = { version = "4.3", features = ["derive"] }
error-stack = "0.5.0"
owo-colors = "4.1.0"
serde_json = "1.0.133"
serde = { version = "1.0", features = ["derive"] }
testresult = "0.4.1"
thiserror = "2.0.3"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
fs2 = "0.4.3"

[dev-dependencies]
assert_cmd = { version = "=2.0.16", features = ["color-auto"] }
assert_fs = { version = "=1.1.2", features = ["color-auto"] }
pretty_assertions = "1.4.1"
testresult = "0.4.1"
